Add Abdó Roig-Maranges to the list of FSF signed contributors

--- a/Changes.org
+++ b/Changes.org
@@ -20,6 +20,7 @@
 
 Welcome and thanks to these new core contributors:
 
+- Abdó Roig-Maranges
 - Andrew Hyatt
 - Andrzej Lichnerowicz
 - Ethan Ligon
