--- a/es/org-mode-news.org
+++ b/es/org-mode-news.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-09-03> Release 7.9.1 (major bugfix release)
 - <2012-08-24> Release 7.9
 - <2012-05-25> Release 7.8.11 (bugfix release)
 - <2012-05-16> Release 7.8.10 (bugfix release)
