--- a/fr/org-mode-nouvelles.org
+++ b/fr/org-mode-nouvelles.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-09-03> Release 7.9.1 (correction de bugs importants)
 - <2012-08-24> Release 7.9
 - <2012-05-25> Sortie de la version 7.8.11 (corrections).
 - <2012-05-16> Sortie de la version 7.8.10 (corrections).
