--- a/index.org
+++ b/index.org
@@ -1,80 +1,20 @@
-#+TITLE:     Org: Your Life in Plain Text
+#+TITLE:     Org mode for Emacs -- Your Life in Plain Text
 #+EMAIL:     carsten at orgmode dot org
 #+LANGUAGE:  en
+#+STARTUP:   hidestars
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
 #+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
 #+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+STYLE:     <base href="http://orgmode.org/" />
-#+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
-#+STYLE:     <link rel="icon" type="image/png" href="org-mode-unicorn.png" />
-#+STYLE:     <link rel="stylesheet" href="http://orgmode.org/css/lightbox.css" type="text/css" />
 
-#+begin_html
-<script type="text/javascript">
-if (navigator.appName == 'Netscape')
-var language = navigator.language;
-else
-var language = navigator.browserLanguage;
-if (language.indexOf('fr') > -1) document.location.href = '/fr/index.html';
-if (language.indexOf('es') > -1) document.location.href = '/es/index.html';
-if (language.indexOf('ja') > -1) document.location.href = '/ja/index.html';
-</script>
-#+end_html
+/Une phrase pour résumer./
 
-* Org: an Emacs Mode for Notes, Planning, and Authoring
+* Text
 
-# See http://jonraasch.com/blog/a-simple-jquery-slideshow for a slideshow
+Download Org 7.9.1 as a zip or tar.gz
 
-#+begin_html
-<script language="Javascript">
-function banner() { } ; b = new banner() ; n = 0
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/1.jpg' title='Org mode file with Timeline' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/1.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/2.jpg' title='Org mode lets you manipulate tables easily' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/2.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/3.jpg' title='View your Org mode with as an Agenda' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/3.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/4.jpg' title='Integration of Org mode and Emacs calendar' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/4.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/5.jpg' title='Export Org mode files to HTML' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/5.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/6.jpg' title='Export Org mode files to LaTeX' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/5.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/7.jpg' title='Org mode: schedule items and add deadlines' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/6.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/8.jpg' title='Org mode: managing TODO lists' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/7.jpg' alt='' /></a>"
-i=Math.floor(Math.random() * n) ;
-document.write( b[i] )
-</script>
-#+end_html
+* Image
 
-(Click to enlarge the picture - press =Escape= to lower it.)
+#+ATTR_HTML: width="500px"
+[[file:orgmode.png]]
 
-Org mode is for keeping notes, maintaining TODO lists, doing project
-planning, and authoring with a fast and effective plain-text system.
 
-* Keep simple things simple... and do more
-
-- Simplicity :: At its core, Org mode is a simple outliner for note-taking
-                and list management. You can learn the basics for using it
-                in [[http://orgmode.org/worg/org-tutorials/orgtutorial_dto.php][five minutes]].  This may be all you need, and Org mode
-                will not impose more complex features on you.
-
-- Portability :: Org files are [[http://en.wikipedia.org/wiki/Plain_text][plain text]].  You can view and edit them in
-                 any editor, or add and extract data with custom-made
-                 scripts.  Your data will never be locked into an obscure
-                 or proprietary data format.  Org mode runs in [[http://www.gnu.org/software/emacs/][Emacs]], which
-                 is available for nearly every platform.
-
-- Depth :: Org mode will not let you down when you need more than a simple
-           outline.  The full feature set is both broad and deep, easy to
-           access, but unobtrusive.  The [[http://orgmode.org/worg/org-faq.php][typical answer]] to "/Can it do X?/"
-           is "/Yes!/".
-
-- Flexibility :: Org mode is like a Swiss army knife.  People use it for
-                 [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Getting Things Done (GTD)]], as a [[http://newartisans.com/2007/08/using-org-mode-as-a-day-planner/][Day Planner]], as a
-                 [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]], for Web and PDF authoring, and much more.
-
-- Support :: Org mode is [[http://orgmode.org/manual/index.html][documented extensively]], and many [[http://orgmode.org/worg/org-tutorials/index.php][tutorials]] put
-             spotlights on particular features.  Org mode is supported by
-             an active [[file:org-mode-support.org][mailing list]] where questions are answered quickly
-             and effectively.
-
-- It's free! :: Org is [[http://en.wikipedia.org/wiki/Free_software][free software]], it is published under the [[http://www.gnu.org/licenses/licenses.html#GPL][GNU GPL
-                license version 3]], like [[http://www.gnu.org/software/emacs/][GNU Emacs]].
-
-If you'd like to know what other people have said about Org mode, take a
-look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org]].
