--- a/survey.org
+++ b/survey.org
@@ -1,6 +1,6 @@
-#+TITLE:     Org mode Survey Results
+#+TITLE:     Org mode for Emacs -- Survey Results
 #+AUTHOR:    Charles Cave
-#+EMAIL:     charles.cave@gmail.com
+#+EMAIL:     charles dot cave at gmail dot com
 #+STARTUP:   hidestars
 #+LANGUAGE:  en
 #+OPTIONS:   H:3 num:nil toc:1 \n:nil @:t ::t |:t ^:t -:t f:t *:t TeX:t LaTeX:nil skip:nil d:nil tags:not-in-toc
