--- a/index.org
+++ b/index.org
@@ -40,7 +40,7 @@ Daily snapshots: [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://or
 - [[file:features.org][List of features]]
 - [[#docs][Manuals and tutorials]]
 - [[file:talks.org][Talks about Org mode]]
-- [[http://localhost/org-mode/community.html#gsoc][Google Summer of Code 2012]]
+- [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
 - [[file:community.org][Mailing list and goodies]]
 
 ** More
