--- a/index.org
+++ b/index.org
@@ -10,11 +10,11 @@
 #+STYLE:     <link rel="stylesheet" href="org.css" type="text/css" />
 
 #+BEGIN_HTML
-<div style="margin-top:0pt;"><em>Org mode is for keeping notes, maintaining TODO lists, doing project
-planning, and authoring with a fast and effective plain-text system. </div>
+<div style="margin-top:0pt;"><p><em>Org mode is for keeping notes, maintaining TODO lists, doing project
+planning, and authoring with a fast and effective plain-text system.<br />
 
-<div style="margin:0;font-size:70%;"> It was created by <a href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003 and
-is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> since 2011. </em></div>
+<span style="font-size:70%;">It was created by <a href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003 and
+is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> since 2011.</span></em></p></div>
 #+END_HTML
 
 * Download and install
